Fixed column spacings.

--- a/css/style.less
+++ b/css/style.less
@@ -238,9 +238,8 @@ footer ul, #markdown-toc {
 	text-align: center;
 }
 
-// This is going to give spacing between grid columns
-.box {
-	padding-right: 1em;
+figure.highlight {
+	margin: 0;
 }
 
 .feature {
